syntax="proto3";

package cjml;

message UserInfo
{
    uint64 uId = 1;
    bytes uName = 2;
    bytes pwd = 3;
}