syntax="proto3";

package cjml;

message XfResponse 
{
  int32 state = 1;
  string body = 2;
}